--- a/SoundLog/SoundLog/Presentation/SoundLogScene/View/RecordingSound.storyboard
+++ b/SoundLog/SoundLog/Presentation/SoundLogScene/View/RecordingSound.storyboard
@@ -11,7 +11,7 @@
         <!--Sound Log View Controller-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="Record" id="Y6W-OH-hqX" customClass="SoundLogViewController" customModule="SoundLog" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SoundLogViewController" id="Y6W-OH-hqX" customClass="SoundLogViewController" customModule="SoundLog" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
