--- a/SoundLog/SoundLog/Presentation/CommonViews/Base.lproj/Main.storyboard
+++ b/SoundLog/SoundLog/Presentation/CommonViews/Base.lproj/Main.storyboard
@@ -74,14 +74,11 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bga-7e-95c">
                                         <rect key="frame" x="0.0" y="0.0" width="109" height="32"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="_monthlylbl_bg" translatesAutoresizingMaskIntoConstraints="NO" id="OIt-wt-5jL">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="monthlylbl_bg" translatesAutoresizingMaskIntoConstraints="NO" id="OIt-wt-5jL">
                                                 <rect key="frame" x="0.0" y="11" width="109" height="13"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="월별 음악기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sU1-M8-wIR">
                                                 <rect key="frame" x="0.0" y="8" width="109" height="16"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="109" id="3Tj-A2-xNQ"/>
-                                                </constraints>
                                                 <fontDescription key="fontDescription" name="GmarketSansMedium" family="Gmarket Sans" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -100,7 +97,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6J-fv-VGE">
                                         <rect key="frame" x="279" y="0.0" width="51" height="32"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="51" id="u9R-z7-9wy"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="750" constant="51" id="u9R-z7-9wy"/>
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
@@ -211,9 +208,9 @@
     </scenes>
     <color key="tintColor" systemColor="labelColor"/>
     <resources>
-        <image name="_monthlylbl_bg" width="109" height="13"/>
         <image name="homeIcon" width="24" height="24"/>
         <image name="home_highlight" width="24" height="24"/>
+        <image name="monthlylbl_bg" width="109" height="13"/>
         <image name="moreIcon" width="24" height="24"/>
         <image name="more_highlight" width="24" height="24"/>
         <image name="plus" catalog="system" width="128" height="113"/>
