Design: modify auto layout constraint

--- a/SoundLog/SoundLog/Presentation/CommonViews/Base.lproj/Main.storyboard
+++ b/SoundLog/SoundLog/Presentation/CommonViews/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="월별 음악기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sU1-M8-wIR">
                                                 <rect key="frame" x="0.0" y="8" width="109" height="16"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="109" id="QCt-LA-9XB"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="250" constant="109" id="QCt-LA-9XB"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="GmarketSansMedium" family="Gmarket Sans" pointSize="16"/>
                                                 <nil key="textColor"/>
