--- a/SoundLog/SoundLog/Presentation/CommonViews/Base.lproj/Main.storyboard
+++ b/SoundLog/SoundLog/Presentation/CommonViews/Base.lproj/Main.storyboard
@@ -72,15 +72,15 @@
                                 <rect key="frame" x="30" y="164" width="330" height="32"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bga-7e-95c">
-                                        <rect key="frame" x="0.0" y="0.0" width="109" height="32"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="32"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="monthlylbl_bg" translatesAutoresizingMaskIntoConstraints="NO" id="OIt-wt-5jL">
                                                 <rect key="frame" x="0.0" y="11" width="109" height="13"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="월별 음악기록" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sU1-M8-wIR">
-                                                <rect key="frame" x="0.0" y="8" width="109" height="16"/>
+                                                <rect key="frame" x="0.0" y="8" width="120" height="16"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="250" constant="109" id="QCt-LA-9XB"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="750" constant="120" id="QCt-LA-9XB"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="GmarketSansMedium" family="Gmarket Sans" pointSize="16"/>
                                                 <nil key="textColor"/>
@@ -97,10 +97,10 @@
                                             <constraint firstItem="sU1-M8-wIR" firstAttribute="leading" secondItem="Bga-7e-95c" secondAttribute="leading" id="ynW-0p-IIG"/>
                                         </constraints>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6J-fv-VGE">
-                                        <rect key="frame" x="279" y="0.0" width="51" height="32"/>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q6J-fv-VGE">
+                                        <rect key="frame" x="280" y="0.0" width="50" height="32"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="750" constant="51" id="u9R-z7-9wy"/>
+                                            <constraint firstAttribute="width" priority="250" constant="51" id="u9R-z7-9wy"/>
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
